header with login done

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
-  <div class="user-information"></div>
+  <app-user-information></app-user-information>
   <app-auth></app-auth>
 </div>
