popup with id provider options

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -6,7 +6,7 @@
 </ng-container>
 
 <ng-template #loginButton>
-  <div class="button" (click)="login()">
+  <div class="button" (click)="openProviderDialog()">
     <mat-icon>exit_to_app</mat-icon>
     <ng-container #loginText> Anmelden</ng-container>
   </div>
