added route guard, rerouting after login

--- a/src/app/auth/not-logged-in/not-logged-in.component.html
+++ b/src/app/auth/not-logged-in/not-logged-in.component.html
@@ -1,5 +1,1 @@
-
-<div class="warn">
-  <mat-icon class="material-icons-round">warning</mat-icon>
-  <div class="text">Bitte melden Sie sich an um Zugriff auf Ihre Daten zu bekommen. </div>
-</div>
+<app-warn>Bitte melden Sie sich an um Zugriff auf Ihre Daten zu erhalten.</app-warn>
