added datev color to theme, added tabs for navigation

--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -9,10 +9,77 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$md-datev: (
+    50 : #e0f5f2,
+    100 : #b3e6dd,
+    200 : #80d5c7,
+    300 : #4dc4b1,
+    400 : #26b7a0,
+    500 : #00aa8f,
+    600 : #00a387,
+    700 : #00997c,
+    800 : #009072,
+    900 : #007f60,
+    A100 : #adffe7,
+    A200 : #7affd8,
+    A400 : #47ffc9,
+    A700 : #2dffc2,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+$md-euer: (
+    50 : #eef8e5,
+    100 : #d4efbf,
+    200 : #b7e495,
+    300 : #9ad96a,
+    400 : #84d04a,
+    500 : #6ec82a,
+    600 : #66c225,
+    700 : #5bbb1f,
+    800 : #51b419,
+    900 : #3fa70f,
+    A100 : #e1ffd6,
+    A200 : #bcffa3,
+    A400 : #97ff70,
+    A700 : #85ff57,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #000000,
+        500 : #000000,
+        600 : #000000,
+        700 : #000000,
+        800 : #000000,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$solid-DATEV-primary: mat.define-palette(mat.$indigo-palette);
+$solid-DATEV-primary: mat.define-palette($md-datev);
 $solid-DATEV-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
@@ -27,6 +94,7 @@ $solid-DATEV-theme: mat.define-light-theme((
     warn: $solid-DATEV-warn,
   )
 ));
+
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
