created card for app

--- a/src/app/auth/not-logged-in/not-logged-in.component.html
+++ b/src/app/auth/not-logged-in/not-logged-in.component.html
@@ -1,1 +1,4 @@
+<app-card>
+  <!-- <div title>Nicht angemeldet</div> -->
 <app-warn>Bitte melden Sie sich an um Zugriff auf Ihre Daten zu erhalten.</app-warn>
+</app-card>
