--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -1,7 +1,8 @@
 
 $grey: #C8C8C8;
 $dark-grey: #5C5C5C;
-$light-bg: #FCFEFF;
+$light-bg: #E5E5E5;
+$datev-green: #00aa8f;
 
 
 $warning: rgba(230, 73, 45, 0.6);
