read buchungen data from pod

--- a/src/app/main/buchungen/buchungen.component.html
+++ b/src/app/main/buchungen/buchungen.component.html
@@ -1,3 +1,5 @@
 <app-card>
   <div title>Buchungen</div>
+
+  <app-buchungen-table *ngIf="buchungen|async let buchung" [buchungen]="buchung"></app-buchungen-table>
 </app-card>
