add buchung dialog

--- a/src/app/main/buchungen/buchungen.component.scss
+++ b/src/app/main/buchungen/buchungen.component.scss
@@ -5,3 +5,20 @@
   display:flex;
   justify-content: center;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  flex-grow: 1;
+
+  .buttons {
+    display: flex;
+    button {
+      margin-left: 22px;
+
+      mat-icon {
+        margin-right: 20px;
+      }
+    }
+  }
+}
