--- a/src/app/main/buchungen/buchungen-table/buchungen-table.component.html
+++ b/src/app/main/buchungen/buchungen-table/buchungen-table.component.html
@@ -1,35 +1,35 @@
-<table mat-table [dataSource]="buchungen" class="mat-elevation-z8">
+<table aria-describedby="Buchungsübersicht" mat-table [dataSource]="buchungen" class="mat-elevation-z8">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Id Column -->
   <ng-container matColumnDef="id">
-    <th mat-header-cell *matHeaderCellDef> Id </th>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Id </th>
     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
   </ng-container>
 
   <!-- description Column -->
   <ng-container matColumnDef="description">
-    <th mat-header-cell *matHeaderCellDef> Beschreibung </th>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Beschreibung </th>
     <td mat-cell *matCellDef="let element"> {{element.description}} </td>
   </ng-container>
 
   <!-- Date Column -->
   <ng-container matColumnDef="date">
-    <th mat-header-cell *matHeaderCellDef> Datum </th>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Datum </th>
     <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>
   </ng-container>
 
   <!-- Amount Column -->
   <ng-container matColumnDef="amount">
-    <th mat-header-cell *matHeaderCellDef> Betrag in Euro </th>
-    <td mat-cell *matCellDef="let element"> {{element.amount}} </td>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Betrag in Euro </th>
+    <td mat-cell *matCellDef="let element"> {{element.amount |number:".2-2":"de"}} </td>
   </ng-container>
 
   <!-- Type Column -->
   <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef> Art </th>
+    <th scope="col" mat-header-cell *matHeaderCellDef> Art </th>
     <td mat-cell *matCellDef="let element"> {{element.type}} </td>
   </ng-container>
 
