--- a/src/app/main/buchungen/buchungen.component.html
+++ b/src/app/main/buchungen/buchungen.component.html
@@ -1,5 +1,17 @@
 <app-card>
-  <div title>Buchungen</div>
-
-  <app-buchungen-table *ngIf="buchungen|async let buchung" [buchungen]="buchung"></app-buchungen-table>
+  <div title class="header">
+    Buchungen
+    <div class="buttons">
+      <button mat-flat-button color="primary">
+        <mat-icon>unarchive</mat-icon>Buchungen freigeben
+      </button>
+      <button mat-flat-button color="primary" (click)="addBuchung()">
+        <mat-icon>add_circle</mat-icon>Buchung anlegen
+      </button>
+    </div>
+  </div>
+  <app-buchungen-table
+    *ngIf="buchungen | async; let buchung"
+    [buchungen]="buchung"
+  ></app-buchungen-table>
 </app-card>
