--- a/src/app/main/card/card.component.scss
+++ b/src/app/main/card/card.component.scss
@@ -1,3 +1,4 @@
+@import "colors";
 
 :host {
   justify-content: center;
@@ -22,5 +23,6 @@
     font-size: 1.2em;
     padding-bottom: 43px;
     flex-grow: 0;
+    color: $dark-grey;
   }
 }
