--- a/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.html
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.html
@@ -1,4 +1,4 @@
 <app-card>
   <div title>Einkommenüberschussrechnungen</div>
-  {{euers|async|json}}
+  <app-euer-table *ngIf="euers|async; let euer" [euers]="euer"></app-euer-table>
 </app-card>
