added styling for euer table + sumDirective

--- a/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.scss
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.scss
@@ -1,7 +1,14 @@
+@import "colors";
+
 table {
   width: 100%;
   text-align: end;
   th.mat-header-cell  {
     text-align: end;
+  }
+
+  .mat-column-action mat-icon{
+    color: $datev-green;
+    cursor: pointer;
   }
 }
