--- a/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.html
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.html
@@ -36,7 +36,7 @@
   <!-- Result Column -->
   <ng-container matColumnDef="result">
     <th scope="col" mat-header-cell *matHeaderCellDef> Differenz in Euro </th>
-    <td mat-cell *matCellDef="let element"> {{element.result | number:".2-2":"de"}} </td>
+    <td appSum mat-cell *matCellDef="let element"> {{element.result | number:".2-2":"de"}} </td>
   </ng-container>
 
   <!-- Freigabe Column -->
