add EUeR Dialog with month/year picker

--- a/src/app/main/buchungen/buchungen.component.html
+++ b/src/app/main/buchungen/buchungen.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <app-buchungen-table
-    *ngIf="buchungen | async; let buchung"
-    [buchungen]="buchung"
+    *ngIf="buchungen"
+    [buchungen]="buchungen"
   ></app-buchungen-table>
 </app-card>
