--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -3,6 +3,7 @@ $grey: #C8C8C8;
 $dark-grey: #5C5C5C;
 $light-bg: #E5E5E5;
 $datev-green: #00aa8f;
+$medium-grey: #969696;
 
 
 $warning: rgba(230, 73, 45, 0.6);
