--- a/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.scss
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.scss
@@ -5,3 +5,12 @@
   display:flex;
   justify-content: center;
 }
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-grow: 1;
+  align-items: center;
+}
+
