--- a/src/app/main/buchungen/add-buchung-dialog/add-buchung-dialog.component.scss
+++ b/src/app/main/buchungen/add-buchung-dialog/add-buchung-dialog.component.scss
@@ -1,3 +1,4 @@
+@import "colors";
 
 form {
   display: flex;
@@ -7,10 +8,12 @@ form {
     justify-content: space-between;
     display: flex;
     align-items: baseline;
+    color: $medium-grey;
 
     .mat-form-field  {
       padding-left: 4em;
       width: 16em;
+      color: $dark-grey;
     }
   }
 }
