--- a/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.scss
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.scss
@@ -14,3 +14,13 @@
   align-items: center;
 }
 
+#warning {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+  .title {
+    font-size: 1.2em;
+    padding: 1em 0;
+    line-height: 1.3em
+  }
+}
