--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,12 +1,34 @@
 <mat-tab-group>
-  <mat-tab label="Buchungen"> <app-buchungen *ngIf="isAuthorized; else warning"  [buchungen]="buchungen|async" (add)="addBuchung($event)"></app-buchungen> </mat-tab>
-  <mat-tab label="EÜR"> <app-einkommen-ueberschuss-rechnungen  [buchungen] ="buchungen|async"></app-einkommen-ueberschuss-rechnungen> </mat-tab>
-  <mat-tab label="Freigaben"> <app-freigaben></app-freigaben> </mat-tab>
-  <ng-template #warning><app-warn>
-    <div id="warning">
-      <div class="title">Sie haben keine Berechtigung für diese Buchungsübersicht.</div>
-      <div class="text">Sprechen Sie mit dem Unternehmen dessen Buchungen Sie einsehen wollen.</div>
-  </div>
-  </app-warn></ng-template>
+  <mat-tab label="Buchungen">
+    <app-buchungen
+      *ngIf="isAuthorized; else warning"
+      [buchungen]="buchungen | async"
+      (add)="addBuchung($event)"
+    ></app-buchungen>
+  </mat-tab>
+  <mat-tab label="EÜR">
+    <app-einkommen-ueberschuss-rechnungen
+      [buchungen]="buchungen | async"
+    ></app-einkommen-ueberschuss-rechnungen>
+  </mat-tab>
+  <mat-tab label="Freigaben">
+    <app-freigaben
+      [buchungsFreigaben]="buchungsFreigaben | async"
+      [euerFreigaben]="euerFreigaben | async"
+      (removeBuchung)="deleteBuchungsFreigabe($event)"
+      (removeEuer)="deleteEuerFreigabe($event)"
+    ></app-freigaben>
+  </mat-tab>
+  <ng-template #warning
+    ><app-warn>
+      <div id="warning">
+        <div class="title">
+          Sie haben keine Berechtigung für diese Buchungsübersicht.
+        </div>
+        <div class="text">
+          Sprechen Sie mit dem Unternehmen dessen Buchungen Sie einsehen wollen.
+        </div>
+      </div>
+    </app-warn></ng-template
+  >
 </mat-tab-group>
-
