--- a/src/app/main/freigaben/freigaben-table/freigaben-table.component.html
+++ b/src/app/main/freigaben/freigaben-table/freigaben-table.component.html
@@ -1,1 +1,28 @@
-<p>freigaben-table works!</p>
+<table aria-describedby="Buchungsübersicht" mat-table [dataSource]="freigaben" class="mat-elevation-z8">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+  <!-- Id Column -->
+  <ng-container matColumnDef="url">
+    <th scope="col" mat-header-cell *matHeaderCellDef> Url </th>
+    <td mat-cell *matCellDef="let element"> {{element.url}} </td>
+  </ng-container>
+
+  <!-- description Column -->
+  <ng-container matColumnDef="webId">
+    <th scope="col" mat-header-cell *matHeaderCellDef> WebId </th>
+    <td mat-cell *matCellDef="let element"> {{element.webId}} </td>
+  </ng-container>
+
+  <!-- Date Column -->
+  <ng-container matColumnDef="action">
+    <th scope="col" mat-header-cell *matHeaderCellDef> Löschen </th>
+    <td mat-cell *matCellDef="let element"> <mat-icon (click)="remove(element)">delete</mat-icon> </td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+</table>
+
