Groups instead of Agents for read access, dynamic control check for Euer-Freigabe

--- a/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.html
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/einkommen-ueberschuss-rechnungen.component.html
@@ -6,7 +6,7 @@
     </button>
   </div>
 </div>
-  <app-euer-table *ngIf="euers|async; let euer" [euers]="euer"></app-euer-table>
+  <app-euer-table *ngIf="euers|async; let euer" [euers]="euer" (updateAuth)="updateAuth()"></app-euer-table>
 </app-card>
 <ng-template #warning>
   <app-warn>
