added links to pod ressources

--- a/src/app/main/buchungen/buchungen-table/buchungen-table.component.html
+++ b/src/app/main/buchungen/buchungen-table/buchungen-table.component.html
@@ -6,7 +6,7 @@
   <!-- Id Column -->
   <ng-container matColumnDef="id">
     <th scope="col" mat-header-cell *matHeaderCellDef> Id </th>
-    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+    <td mat-cell *matCellDef="let element"> <a [href]="element.resourceUrl" target="_blank">{{element.id}}</a> </td>
   </ng-container>
 
   <!-- description Column -->
