--- a/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.html
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.html
@@ -45,6 +45,11 @@
     <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="hasControl.get(element.resourceUrl)" (click)="auth(element)">unarchive</mat-icon> </td>
   </ng-container>
 
+  <ng-container matColumnDef="link">
+    <th scope="col" mat-header-cell *matHeaderCellDef> Ressource </th>
+    <td mat-cell *matCellDef="let element"> <mat-icon (click)="goToLink(element.resourceUrl)">open_in_new</mat-icon> </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
