--- a/src/app/header/user-information/user-information.component.scss
+++ b/src/app/header/user-information/user-information.component.scss
@@ -9,6 +9,12 @@
   }
 }
 
+.user-information.light {
+  .user-data .text .name {
+    color: white;
+  }
+}
+
 .user-data {
   height: 100%;
   flex-direction: row;
