--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="isLoggedIn | async; let loggedIn; else: loginButton">
-  <div class="button" (click)="logout()">
-    <mat-icon>exit_to_app</mat-icon>
+  <div class="button" (click)="logout()" [ngClass]="{'light': light}">
+  <mat-icon>exit_to_app</mat-icon>
     <ng-container> Abmelden </ng-container>
   </div>
 </ng-container>
