--- a/src/app/main/buchungen/buchungen-table/buchungen-table.component.html
+++ b/src/app/main/buchungen/buchungen-table/buchungen-table.component.html
@@ -5,32 +5,35 @@
 
   <!-- Id Column -->
   <ng-container matColumnDef="id">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Id </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Id </th>
     <td mat-cell *matCellDef="let element"> <a [href]="element.resourceUrl" target="_blank">{{element.id}}</a> </td>
   </ng-container>
 
   <!-- description Column -->
   <ng-container matColumnDef="description">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Beschreibung </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Beschreibung </th>
     <td mat-cell *matCellDef="let element"> {{element.description}} </td>
   </ng-container>
 
   <!-- Date Column -->
   <ng-container matColumnDef="date">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Datum </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Datum </th>
     <td mat-cell *matCellDef="let element"> {{element.date | date}} </td>
   </ng-container>
 
   <!-- Amount Column -->
   <ng-container matColumnDef="amount">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Betrag in Euro </th>
-    <td mat-cell *matCellDef="let element"> {{element.amount |number:".2-2":"de"}} </td>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Betrag in Euro </th>
+    <td mat-cell *matCellDef="let element"> {{element.amount |number:".2-2"}} </td>
   </ng-container>
 
   <!-- Type Column -->
   <ng-container matColumnDef="type">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Art </th>
-    <td mat-cell *matCellDef="let element"> {{element.type}} </td>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Art </th>
+    <td mat-cell *matCellDef="let element"> 
+      <div i18n *ngIf="element.type == 'Einnahme'; else elseBlock">Einnahme</div>
+      <ng-template i18n #elseBlock>Ausgabe</ng-template>
+    </td>
   </ng-container>
 
 
