--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,13 +1,13 @@
 <ng-container *ngIf="isLoggedIn | async; let loggedIn; else: loginButton">
   <div class="button" (click)="logout()" [ngClass]="{'light': light}">
   <mat-icon>exit_to_app</mat-icon>
-    <ng-container> Abmelden </ng-container>
+    <ng-container i18n> Abmelden </ng-container>
   </div>
 </ng-container>
 
 <ng-template #loginButton>
   <div class="button" (click)="openProviderDialog()">
     <mat-icon>exit_to_app</mat-icon>
-    <ng-container #loginText> Anmelden</ng-container>
+    <ng-container i18n #loginText> Anmelden</ng-container>
   </div>
 </ng-template>
