--- a/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.html
+++ b/src/app/main/einkommen-ueberschuss-rechnungen/euer-table/euer-table.component.html
@@ -5,48 +5,48 @@
 
   <!-- Unternehmen Column -->
   <ng-container matColumnDef="business">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Unternehmen </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Unternehmen </th>
     <td mat-cell *matCellDef="let element"> {{element.business}} </td>
   </ng-container>
 
   <!-- Zeitraum Column -->
   <ng-container matColumnDef="timeframe">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Zeitraum </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Zeitraum </th>
     <td mat-cell *matCellDef="let element"> {{element.timeframe | date:"MM/yyyy"}} </td>
   </ng-container>
 
   <!-- Date Column -->
   <ng-container matColumnDef="issueDate">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Datum </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Datum </th>
     <td mat-cell *matCellDef="let element"> {{element.issueDate | date}} </td>
   </ng-container>
 
   <!-- Income Column -->
   <ng-container matColumnDef="sumOfIncome">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Einnahmen in Euro </th>
-    <td mat-cell *matCellDef="let element"> {{element.sumOfIncome |number:".2-2":"de"}} </td>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Einnahmen in Euro </th>
+    <td mat-cell *matCellDef="let element"> {{element.sumOfIncome |number:".2-2"}} </td>
   </ng-container>
 
   <!-- Expense Column -->
     <ng-container matColumnDef="sumOfExpense">
-      <th scope="col" mat-header-cell *matHeaderCellDef> Ausgaben in Euro </th>
-      <td mat-cell *matCellDef="let element"> {{element.sumOfExpense |number:".2-2":"de"}} </td>
+      <th i18n scope="col" mat-header-cell *matHeaderCellDef> Ausgaben in Euro </th>
+      <td mat-cell *matCellDef="let element"> {{element.sumOfExpense |number:".2-2"}} </td>
     </ng-container>
 
   <!-- Result Column -->
   <ng-container matColumnDef="result">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Differenz in Euro </th>
-    <td appSum mat-cell *matCellDef="let element"> {{element.result | number:".2-2":"de"}} </td>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Differenz in Euro </th>
+    <td appSum mat-cell *matCellDef="let element"> {{element.result | number:".2-2"}} </td>
   </ng-container>
 
   <!-- Freigabe Column -->
   <ng-container matColumnDef="action">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Freigeben </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Freigeben </th>
     <td mat-cell *matCellDef="let element"> <mat-icon *ngIf="hasControl.get(element.resourceUrl)" (click)="auth(element)">unarchive</mat-icon> </td>
   </ng-container>
 
   <ng-container matColumnDef="link">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Ressource </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Ressource </th>
     <td mat-cell *matCellDef="let element"> <mat-icon (click)="goToLink(element.resourceUrl)">open_in_new</mat-icon> </td>
   </ng-container>
 
