--- a/src/app/main/freigaben/freigaben-table/freigaben-table.component.html
+++ b/src/app/main/freigaben/freigaben-table/freigaben-table.component.html
@@ -5,19 +5,19 @@
 
   <!-- Id Column -->
   <ng-container matColumnDef="url">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Ressource [Uri] </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Ressource [Uri] </th>
     <td mat-cell *matCellDef="let element"> <a [href]="element.url" target="_blank">{{element.url}}</a></td>
   </ng-container>
 
   <!-- description Column -->
   <ng-container matColumnDef="webId">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Freigegeben für Gruppe </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Freigegeben für Gruppe </th>
     <td mat-cell *matCellDef="let element"> <a [href]="element.webId" target="_blank">{{element.webId}}</a></td>
   </ng-container>
 
   <!-- Date Column -->
   <ng-container matColumnDef="action">
-    <th scope="col" mat-header-cell *matHeaderCellDef> Löschen </th>
+    <th i18n scope="col" mat-header-cell *matHeaderCellDef> Löschen </th>
     <td mat-cell *matCellDef="let element"> <mat-icon (click)="remove(element)">delete</mat-icon> </td>
   </ng-container>
 
